--- a/public/stat120/Day19.Rmd
+++ b/public/stat120/Day19.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Inference for means using the t-distribution"
+title: "Inference for one mean"
 subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
@@ -10,7 +10,7 @@ output:
     chakra: libs/remark-latest.min.js
     seal: false
     nature:
-      highlightStyle: googlecode  #http://arm.rbind.io/slides/xaringan.html#77 # idea, magula
+      highlightStyle: googlecode  #http://arm.rbind.io/slides/xaringan.html#77 # idea, magula, googlecode, default
       highlightLines: true
       highlightLanguage: ["r", "css", "yaml"]
       countIncrementalSlides: true
@@ -18,10 +18,11 @@ output:
       titleSlideClass: ["left", "middle", "inverse"]
       ratio: "16:9"
     includes:
-      in_header: header.html
+      in_header: header.html  
 editor_options: 
   chunk_output_type: console
 ---
+
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
@@ -30,7 +31,7 @@ options(ggrepel.max.overlaps = Inf)
 
 knitr::opts_chunk$set(echo = TRUE, 
                       dev = 'svg',
-                      collapse = FALSE, 
+                      collapse = TRUE, 
                       comment = NA,  # PRINTS IN FRONT OF OUTPUT, default is '##' which comments out output
                       prompt = FALSE, # IF TRUE adds a > before each code input
                       warning = FALSE, 
@@ -40,10 +41,12 @@ knitr::opts_chunk$set(echo = TRUE,
                       out.width = "100%"
                       )
 
+
+
 # load necessary packages
 library(tidyverse)
-library(dplyr)
 library(countdown)
+library(mosaic)
 library(ggthemes)
 library(xaringanExtra)
 library(forcats)
@@ -51,29 +54,23 @@ xaringanExtra::use_panelset()
 xaringanExtra::use_tachyons()
 xaringanExtra::use_clipboard()
 xaringanExtra::use_extra_styles(
-  hover_code_line = TRUE,         
-  mute_unhighlighted_code = TRUE  
+  hover_code_line = TRUE,         #<<
+  mute_unhighlighted_code = TRUE  #<<
 )
 library(flipbookr)
 library(patchwork)
-library(DT)
-library(knitr)
-library(grid)
-library(gridExtra)
-
-
-select <- dplyr::select
+library(Lock5Data)
 
 # Set ggplot theme
 theme_set(theme_tufte(base_size = 10))
 
+
 yt <- 0
 
-set.seed(1234)
-
-# read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/agstrat.csv")
+# read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/APM_DougEvansCases.csv")
 
 ```
+
 
 
 ```{r xaringanExtra-clipboard, echo=FALSE}
@@ -90,106 +87,149 @@ htmltools::tagList(
 
 layout: true
   
+<!-- <div class="my-footer"><span>Stat 230</span></div> -->
+<!-- this adds the link footer to all slides, depends on my-footer class in css-->
+
 ---
 
 class: title-slide, middle
+<!-- background-image: url("assets/title-image2.jpg") -->
+background-position: 10% 90%, 100% 50%
+background-size: 160px, 100% 100%
 
-# .fancy[Inference for means using the t-distribution]
+# .fancy[Inference for one mean]
 
 ### .fancy[Stat 120]
 
 `r format(Sys.Date(), ' %B %d %Y')`
 
----
-
-class: middle
-
-# The SE for means
-
-.bql.font80[
-- The standard error for $\bar{x}$ is
-$$S E_{\bar{x}}=\frac{\sigma}{\sqrt{n}}$$
-where $\sigma$ is the population SD of your response
-
-- The standard error for $\bar{x}_{1}-\bar{x}_{2}$ is
-$$S E_{\bar{x}_{1}-\bar{x}_{2}}=\sqrt{\frac{\sigma_{1}^{2}}{n_{1}}+\frac{\sigma_{2}^{2}}{n_{2}}}$$
-]
-
 
 ---
 
 class: middle
 
-# Unknown $\sigma$
+# CLT for a Mean
 
-
-.bqt[But we usually do not know $\sigma$ !
-  - Estimate $\sigma$ with the sample SD $s$
-]
-
-
----
-
-class: middle
-
-# Central Limit Theorem for means: One sample
-
-.bql-list[
-
-The sampling distribution for a sample mean is approximately $N\left(\mu, S E_{\bar{x}}\right)$]
-
-<br>
+If $n \geq 30^*$, then
 
 .bql[
-When is this approximately "good"?
 
-- if $X \sim N(\mu, \sigma)$ then $\bar{X} \sim N(\mu, \sigma / \sqrt{n})$
+$$\bar{X} \approx N\left(\mu, \frac{\sigma}{\sqrt{n}}\right)$$
 
-- if $X \nsim N(\mu, \sigma)$ then $\bar{X} \sim N(\mu, \sigma / \sqrt{n})$ if $n \geqslant 30$
 ]
+
+.hljs[
+*Smaller sample sizes may be sufficient for symmetric distributions, and 30 may not be sufficient for very skewed distributions or distributions with high outliers
+]
+
+---
+
+
+class: middle
+
+#  CLT for mean
+
+<center>
+<img src="images/mean-normal.png", width="55%" height="60%"> <br>
+</center>
 
 
 ---
 
-class: middle
-
-# Problem!
-
-.bql.font90[
-- The estimated SE varies from sample to sample, along with $\bar{x}$ ! 
-
-- In $z$, only $\bar{x}$ varies from sample to sample
-$$z=\frac{\bar{x}-\mu}{\sigma / \sqrt{n}} \sim N(0,1)$$
-
-- In $t$, both $\bar{x}$ and $s$ vary from sample to sample
-$$t=\frac{\bar{x}-\mu}{s / \sqrt{n}} \sim ? ? ?$$
-
-]
-
-
----
 
 class: middle
 
-# Central Limit Theorem for means: Two independent samples:
+# Standard Deviation
 
-.bql-list[
-The sampling distribution for a difference of two independent sample means is approximately $N\left(\mu_{1}-\mu_{2}, S E_{\bar{x}_{1}-\bar{x}_{2}}\right)$
+.bql[
+The standard deviation of the population is
+
+a) $\sigma$
+
+b) $s$
+
+c) $\frac{\sigma}{\sqrt{n}}$
 ]
 
 <br>
+<details>
+<summary>.red[Click for answer]</summary>
+The correct answer is a.
+</details>
+
+---
+
+class: middle
+
+# Standard Deviation
 
 .bql[
-When is this approximately "good"?
-- need both $n_{1}$ and $n_{2}$ samples sizes big enough for the one-sample condition
+The standard deviation of the sample is
+
+a) $\sigma$
+
+b) $s$
+
+c) $\frac{\sigma}{\sqrt{n}}$
 ]
+
+<br>
+<details>
+<summary>.red[Click for answer]</summary>
+The correct answer is b.
+</details>
+
+---
+
+class: middle
+
+# Standard Deviation
+
+.bql[
+The standard deviation of the sample mean is
+
+a) $\sigma$
+
+b) $s$
+
+c) $\frac{\sigma}{\sqrt{n}}$
+]
+
+<br>
+<details>
+<summary>.red[Click for answer]</summary>
+The correct answer is c. The standard error is the standard deviation of the statistic.
+</details>
 
 
 ---
+
+class: middle
+
+#  T-distribution
+
+.bql[
+- Replacing $\sigma$ with $s$ changes the distribution of the z-statistic from a .bold[normal distribution] to a .b[t-distribution]
+- The $t$ distribution is very similar to the standard normal, but with slightly fatter tails to reflect this added uncertainty
+]
+
+---
+
+class: middle
+
+#  T-distribution
+
+<center>
+<img src="images/t-distributions.png", width="55%" height="60%"> <br>
+</center>
+
+
+---
+
 
 # Inference for means
 
-.green-h[.purple[Check:] Check the one- or two-sample size conditions for the CLT]
+.green-h[.purple[Check:] Check the one sample size conditions for the CLT]
 
 .pull-left[
 .bql[
@@ -221,6 +261,8 @@ The $t^{*}$ multiplier comes from a t-distribution with appropriate $d f$
 - Let $\mu$ be the mean pH for all Florida lakes
 $$H_0: \mu = 7 \qquad\qquad H_A: \mu \neq 7$$
 ]
+
+<br>
 
 .bqt.font80[Can we use a t-test?
 - $n=53$ is a decent sample size
@@ -327,232 +369,382 @@ where $t^*$ corresponds to 95% confidence (97.5th percentile):
 qt(.975, df=53-1)
 ```
 
-.hljs[We are 95% confident that the mean pH of all lakes is between 6.236 and 6.946 (slightly acidic)]
+..hljs[We are 95% confident that the mean pH of all lakes is between 6.236 and 6.946 (slightly acidic)]
+
+---
+
+
+class: inverse, middle
+
+.Large.bql.center[Confidence Interval for a Mean]
 
 
 ---
+
 
 class: middle
 
-# Academic Performance Index (API) 
+# Gribbles
 
-.bql-list[
-Academic Performance Index (API) is a number reflecting a school’s performance on a statewide standardized test
-  - simple random sample of $n=200$ schools
-  - variable `growth` measures the growth in API from 1999 to 2000 (API 2000 - API 1999).
-]
-
-```{r}
-# read data
-api <- read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/API.csv")
-```
-
----
-
-class: middle
-
-# Academic Performance Index (API) 
-
-.code110[
-```{r, collapse=TRUE}
-api$wealth <- ifelse(api$meals > 50, "low","high")
-table(api$wealth)
-```
-]
-
-
-.code110[
-```{r, collapse=TRUE}
-library(dplyr)
-api %>% 
-  group_by(wealth) %>% 
-  summarize(mean(growth), sd(growth))
-```
-]
-
----
-
-# API
-
-```{r, fig.width=5, fig.height=4, out.width="50%", fig.align='center'}
-ggplot(api, aes(x = wealth, y = growth)) + geom_boxplot() + 
-  labs(y ="API growth (2000 - 1999)") + coord_flip()
-```
-
-
----
-
-## Hypothesis Test: Can we use t-inference methods to compare mean growths?
-
-.bql.font80[
-- Both samples sizes (98 and 102) can be deemed large 
-- No severe skewness (but two extreme outliers)
-]
-
-.bqt.font80[
-- Estimated Standard Error : $SD_{\bar{x}_h - \bar{x}_l} = \sqrt{\dfrac{28.75380^2}{102} + \dfrac{29.95048^2}{98}} = 4.1544$
-
-- Test statistics: $t = \dfrac{(25.24510 - 38.82653) - 0}{4.154404} = -3.2692$
-]
-
-..hljs[The observed mean difference is 3.3 SEs below the hypothesized mean difference of 0]
-
----
-
-# Two-sample t-test
-
-```{r, highlight.output = c(5)}
-t.test(growth ~ wealth, data = api)
-```
-
-.font80[
-> The p-value is 0.001273. If there is no difference between mean growth in the two populations,
-then there is just a 0.13% chance of seeing a sample mean difference that is 3.27 standard errors or more
-away from 0.
-]
-
----
-
-# Outliers
-
-```{r, collapse=TRUE}
-which(api$growth > 120 )
-```
-
-
-```{r, collapse=TRUE}
-api %>% slice(74,119)  
-```
-
----
-
-# Remove Outliers
-
-```{r, highlight.output = c(5)}
-t.test(growth ~ wealth, data = api, subset = -c(74,119))
-```
-
-..hljs[How does removing outliers influence `t-test` stat and p-value?]
-
-
----
-
-# Confidence Interval
+.hljs[Gribbles are small marine worms that bore through wood, and the enzyme they secrete may allow us to turn inedible wood and plant waste into biofuel]
 
 .pull-left[
-.bql-list.font90[
-.bolder[95% Confidence Interval from the output:]
-- Without Outliers: (-23.57, -8.96)
-- With Outliers: (-21.77, -5.39)
+
+.bql.font80[
+- A sample of 50 gribbles finds an average length of $3.1 \mathrm{~mm}$ with a standard deviation of $0.72 \mathrm{~mm}$.
+
+- Give a $90 \%$ confidence interval for the average length of gribbles.
 ]
 ]
 
 .pull-right[
-.bql.font80[
-.bolder[Removing Outliers:]
-- the difference in means shifted further away from 0
-- CI shifted further from a difference of 0
-- decrease the SE of our sample difference
-]
+<center>
+<img src="images/gribbles.png", width="55%" height="60%"> <br>
+</center>
+
+
 ]
 
---
+
+---
+
+class: middle
+
+# Gribbles
+
+.pull-left[
+
+.bql.font80[
+A sample of 50 gribbles finds an average length of $3.1 \mathrm{~mm}$ with a standard deviation of $0.72 \mathrm{~mm}$. For a $90 \%$ confidence interval for the average length of gribbles, what is $t^*$ ?
+
+a). 1.645
+
+b). 1.677
+
+c). 1.960
+
+d). 1.690
+
+
+]
+
+<br>
+<details>
+<summary>.red[Click for answer]</summary>
+$\begin{gathered}d f=n-1=49 \\ \text { and } \\ t^*=1.677\end{gathered}$
+</details>
+]
+
+.pull-right[
+<center>
+<img src="images/gribbles.png", width="55%" height="60%"> <br>
+</center>
+
+
+]
+
+
+
+
+---
+
+class: middle
+
+# Gribbles
+
+.pull-left[
+
+.bql.font80[
+A sample of 50 gribbles finds an average length of $3.1 \mathrm{~mm}$ with a standard deviation of $0.72 \mathrm{~mm}$. For a $90 \%$ confidence interval for the average length of gribbles, what is the standard error?
+
+a). 0.171
+
+b). 0.720
+
+c). 1.960
+
+d). 0.102
+
+]
+
+<br>
+<details>
+<summary>.red[Click for answer]</summary>
+$\frac{s}{\sqrt{n}}=\frac{0.72}{\sqrt{50}}=0.102$</details>
+]
+
+.pull-right[
+<center>
+<img src="images/gribbles.png", width="55%" height="60%"> <br>
+</center>
+
+
+]
+
+
+
+---
+
+class: middle
+
+# Gribbles
+
+.pull-left[
+
+.bql.font80[
+A sample of 50 gribbles finds an average length of $3.1 \mathrm{~mm}$ with a standard deviation of $0.72 \mathrm{~mm}$. For a $90 \%$ confidence interval for the average length of gribbles, what is the margin of error?
+
+a). 0.171
+
+b). 0.720
+
+c). 1.960
+
+d). 0.102
+
+]
+
+<br>
+<details>
+<summary>.red[Click for answer]</summary>
+$t^* \cdot \frac{s}{\sqrt{n}}=1.677 \cdot \frac{0.72}{\sqrt{50}}=0.171$
+</details>
+]
+
+.pull-right[
+<center>
+<img src="images/gribbles.png", width="55%" height="60%"> <br>
+</center>
+
+
+]
+
+
+
+
+---
+
+class: middle
+
+# Gribbles
+
+.pull-left[
+
+.bq[
+$\begin{gathered}\text { statistic } \pm t^* \cdot S E \\ \bar{x} \pm t^* \cdot \frac{s}{\sqrt{n}} \\ 3.1 \pm 1.677 \cdot \frac{0.72}{\sqrt{50}} \\ 3.1 \pm 0.17 \\ (2.93,3.27)\end{gathered}$
+]
+
+
+]
+
+
+.pull-right[
+
+<center>
+<img src="images/t_90percent.png", width="95%" height="90%"> <br>
+</center>
+
+]
+
+
+.hljs[
+We are $90 \%$ confident that the average length of gribbles is between 2.93 and $3.27 \mathrm{~mm}$.
+]
+
+
+---
+
+# Margin of error
+
+
+$$\mathrm{CI}: \bar{x} \pm t^* \cdot \frac{s}{\sqrt{n}}$$
+
+.bql[
+For a single mean, what is the margin of error?
+
+a) $\frac{s}{\sqrt{n}}$
+
+b) $t^* \cdot \frac{s}{\sqrt{n}}$
+
+c) $2 \cdot \mathrm{t}^* \cdot \frac{s}{\sqrt{n}}$
+
+
+]
+
+
+<br>
+<details>
+<summary>.red[Click for answer]</summary>
+$\text {CI = statistic } \pm \text { margin of error }$
+</details>
+
+---
+
+class: middle
+
+# GPA
+
+.bql[Suppose we want to estimate average GPA at a college (where GPA's go from 0 to 4.0), with a margin of error of 0.1 with $95 \%$ confidence. How large a sample size do we need?
+
+(a) About 100
+
+(b) About 400
+
+(c) About 800
+
+(d) About 1000
+
+
+]
+
+<details>
+<summary>.red[Click for answer]</summary>
+\begin{aligned}
+& s \approx \frac{\max -\min }{4}=\frac{4-0}{4}=1.0 \\
+& n=\left(\frac{Z * s}{M E}\right)^2 \approx\left(\frac{2 \cdot 1}{0.1}\right)^2=400
+\end{aligned}
+</details>
+
+
+---
+
+class: inverse, middle
+
+.Large.bql.center[Hypothesis Test for a Mean]
+
+---
+
+class: middle
+
+# Chips Ahoy!
+
+.hljs[A group of Air Force cadets bought bags of Chips Ahoy! cookies from all over the country to verify this claim.  They hand counted the number of chips in 42 bags.]
+
+
+.pull-left[
+
+<center>
+<img src="images/chipsahoy.png", width="95%" height="90%"> <br>
+</center>
+
+
+]
+
+.pull-right[
+
+.bql[
+\begin{aligned}
+& \bar{x}=1261.6 \text { chips } \\
+& s=117.6 \text { chips } \\
+& n=42 \text { bags }
+\end{aligned}
+]
+
+]
+
+
+
+.footnote[
+Source: Warner, B. $\&$ Rutledge, J. (1999). “Checking the Chips Ahoy! Guarantee,” Chance, 12(1).
+]
+
+---
+
+class: middle
+
+# Chips Ahoy! Hypothesis Test
+
+
+.pull-left-60[
+.bql.font90[
+
+1. State hypotheses: $H_0: \mu=1000 \quad \& \quad H_a: \mu>1000$
+
+2. Check conditions:  $n=42 \geq 30 \quad$ `r emo::ji("check")`
+
+3. Calculate test statistic: $$t=\frac{\bar{X}-\mu_0}{s / \sqrt{n}}=\frac{1261.6-1000}{117.6 / \sqrt{42}}=14.4$$
+
+4. Compute p-value: $p-$ value $\approx 0$
+
+5. Interpret in context:
+
+]
+
+]
+
+.pull-right-40[
+
+<center>
+<img src="images/chipsahoy_pvalue.png", width="100%" height="100%"> <br>
+</center>
+
+.hljs.yellow-h[This provides extremely strong evidence that the average number of chips per bag of Chips Ahoy! cookies is significantly greater than 1000.]
+
+]
+
+
+
+---
+
+class: middle
+
+# Chips Ahoy! Give a 99% confidence interval for the average number of chips in each bag.
+
+.pull-left-60[
 
 .bql.font90[
-.bold[Interpretation:] We are 95% confident that the mean API growth between 1999 and 2000 for all low wealth
-schools is anywhere from 8.96 points to 23.57 points higher than the mean API growth for all high wealth
-schools in California.
+
+1. State hypotheses: $H_0: \mu=1000 \quad \& \quad H_a: \mu>1000$
+
+2. Check conditions:  $n=42 \geq 30 \quad$ `r emo::ji("check")`
+
+3. Find $t^*$: $t^*=2.7$
+
+4. Compute confidence interval: $\begin{aligned}  \bar{X} \pm t^* \times \frac{s}{\sqrt{n}} &=  1261.6 \pm 2.7 \times \frac{117.6}{\sqrt{42}} \\ & = (1212.6,1310.6)\end{aligned}$
+
+5. Interpret in context:
+
+
+]
+
+]
+
+.pull-right-40[
+
+<center>
+<img src="images/chipsahoy_ci.png", width="100%" height="100%"> <br>
+</center>
+
+.hljs[We are 99% confident that the average number of chips per bag of Chips Ahoy! cookies is between 1212.6 and 1310.6 chips.]
+
 ]
 
 ---
 
-## Paired Data
+# Sanity check!
 
-.bql.font90[Data are paired if the data being compared consists of paired data values. Common paired data examples:
-  - Two measurements on each case
-  - natural pairs (twins, spouses, etc)
+.bql[
+Which of the following properties is/are necessary for $t=\frac{\bar{X}-\mu_0}{s / \sqrt{n}}$ to have a $t$-distribution?
+
+a) the data is normal
+
+b) the sample size is large
+
+c) the null hypothesis is true
+
+d) $a$ or $b$
+
+e) $d$ and $c$
+
 ]
 
---
-
-.bql.font90[Use paired data to reduce natural variation in the response when comparing the two groups/treatments
-  - comparing group 1 and 2 responses among similar individuals 
-  - reduces the effects of confounding variables
-  - reduces the SE for the mean difference!
-]
-
----
-
-class: middle
-
-# Analyzing paired data
-
-.bql.font80[
-- Look at the difference between responses for each unit (pair)
-$$d_{i} = x_{1,i} - x_{2,i}$$
-
-- Analyze the .bold[mean of these differences] rather than the average difference between two groups
-$$\textrm{sample mean difference: } \bar{d}$$
-$$\textrm{sample SD of difference: } s_d$$
-$$\textrm{population mean difference: } \mu_d$$
-
-- Use .bold[one sample] inference methods for these differences
-]
-
----
-
-# Tuition example
-
-.bql.font90[How much higher is non-resident tuition, on average, compared to resident tuition? Use the `Tuition2006.csv` lab manual data
-  - the variable `Diff` computes the difference `Res` - `NonRes`
-]
-    
-```{r, collapse=TRUE, highlight.output = 6}
-tuition <- read.csv("http://math.carleton.edu/Stats215/RLabManual/Tuition2006.csv")
-str(tuition)
-```
+<br>
+<details>
+<summary>.red[Click for answer]</summary>
+.hljs[To use the t-distribution, either n has to be large or the population has to be normally distributed. If these conditions are met, then t has a t-distribution when the null hypothesis is true]
+</details>
 
 
----
-
-## Tuition example
-
-.bql.font80[
-- Smaller sample size (n=19) and slightly left-skewed distribution or roughly symmetric with one low case!
-]
-
-
-.pull-left[
-```{r, echo=FALSE}
-ggplot(tuition, aes(x = Diff)) +
-  geom_histogram(fill = "steelblue", 
-                 bins = 5,
-                 col = "lightblue") +
-  labs(title = "Histogram")
-```
-]
-.pull-right[
-```{r, echo=FALSE}
-ggplot(tuition, aes(sample = Diff)) +
-  stat_qq() +
-  stat_qq_line()+
-  labs(title = "Q-Q Plot")
-```
-]
-
----
-
-## Tuition example
-
-.bql[We are 95% confident that the mean tuition for non-residents is $2,585 to $4584 higher than mean tuition for residents]
-
-```{r, collapse=TRUE}
-t.test(tuition$Diff)
-```
-
-```{r, collapse=TRUE}
-sd(tuition$Diff)/sqrt(19)  # SE for mean diff
-```
 
 
 ---
@@ -561,20 +753,20 @@ class: action
 
 # <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
 
-
 .pull-left-40[
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
 ]
 .pull-right-60[
-
 <br>
 <br>
-
 .bql[
-- Go over to the in class activity file
-- Complete the activity 
-]
+
+Let's go over to the class activity .Rmd file and complete the tasks for today.
+
+
 ]
 
-`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+]
+
+`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
